		Armor repair
			Remove damage from armor
		Shrink armor
			Lowers the size of an armor piece by 1 level
		Grow armor
			Increases the size of an armor piece by 1 level
			Requires an armor piece of the same type to be
			combined
		Change Shape
			Change the shape (barded/segmented/centaur) of a piece
			of armor
			Requires a corpse or figurine reference item if not using your shape
Dungeon Changes
	Added adventure branches and the village
		Dlvl4 is now a village of friendlies of your race
			4 different variants that race helps select
		Talk to the travelling wizard to open a portal to a branch
		Five branches with unique prizes and enemies
			Ice Caves
				Fight the abominable snowman for the
				abominable veil
					cold res cloak of discplacement
			Black Forest
				Fight the tulip poplar for the poplar punisher
					+2d6 dmg quarterstaff
			Gnomish Mines
				Fight Raggo the Gnome King, Ruggo's crazed brother 
				for his lucky pet rock
			Dismal Swamp
				Fight Kroo the Kobold King and his court
					very fast speed ring of poison
					resistance
			Archipelago
				Fight the ancient something and his tentacles
					emerald with slotless magical
					breathing and swimming
		Go play and find out!
	Collapsed mineshaft branch added, random mines end level accessible from oracle level
	Replace sokoban with lokobanv2
		Single soko level with a few crates, no pits, and a lokoban pinata
		Lokoban pinata 
			doesn't move, no attacks
			on death, scatters
				3 wands and rings
				30 random food items
				500 gold
				either a bag of holding, amulet of reflection, or more gold
					depends on what you already have
			has like 1.4-1.5k hp
			can be instakilled if you play the pinata game properly
	Neutral Quest changes
		Branch to spire from the spire in the outlands.
		At the top is the sigil with stores and the lady of pain who
		carries the Cage key.
			At the sigil is also Fell, the tattoo master who sells
			tats.
				hourglass
					increases speed by 1