@@ -5801,12 +5801,12 @@ struct permonst _mons2[] = {
 	MB_HUMANOID|MB_STRONG /*MB*/, MG_NOWISH|MG_NOPOLY|MG_INFRAVISIBLE /*MG*/,
 	MA_HUMAN /*MA*/,  MV_NORMAL /*MV*/, HI_DOMESTIC),
     MON("armorsmith", S_HUMAN,//18
-	LVL(12, 8, 50, 0),  G_NOGEN, /*level raised so as to avoid being attacked by horses*/
+	LVL(12, 8, 50, 0),  G_NOGEN, 
 	DEF(SPE_AC(10)),
 	A(ATTK(AT_WEAP, AD_PHYS, 4, 4), ATTK(AT_XWEP, AD_PHYS, 4, 4)),
 	SIZ(WT_HUMAN, 400, MS_SMITH, MZ_HUMAN), 0, 0,
 	0 /*MM*/, MT_OMNIVORE|MT_PEACEFUL|MT_COLLECT|MT_MAGIC /*MT*/, MF_MARTIAL_B /*MF*/,
-	MB_HUMANOID|MB_STRONG /*MB*/, MG_NOWISH|MG_NOPOLY|MG_INFRAVISIBLE /*MG*/,
+	MB_HUMANOID|MB_STRONG /*MB*/, MG_NOPOLY|MG_INFRAVISIBLE /*MG*/,
 	MA_HUMAN /*MA*/,  MV_NORMAL /*MV*/, HI_DOMESTIC),
     MON("guard", S_HUMAN,//14 /*Needs encyc entry*/
 	LVL(12, 12, 40, 10),  G_NOGEN,
